meegotouchhome (1.2.1~1) unstable; urgency=low

  * [UNRELEASED]
  * Fixes: NB#277602 - [PR1.0 Regression] PR1.1 boot time is 10 seconds slower than PR1.0
  * Fixes: NB#279627 - Launcher buttons are not grayed out while an application is starting

 -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Tue, 23 Aug 2011 16:53:13 +0300

meegotouchhome (1.2.0-1) unstable; urgency=low

  * Fixes: NB#276677 - Home has increased startup time for applications

 -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Tue, 23 Aug 2011 16:51:22 +0300

meegotouchhome (1.1.8-1) unstable; urgency=low

  * Fixes: NB#248129 - Paging canceling behavior is off
  * Fixes: NB#277233 - meegotouchhome: unbuildable with gcc-4.5

 -- Pankaj Saharan <pankaj.saharan@nokia.com>  Thu, 04 Aug 2011 17:21:49 +0300

meegotouchhome (1.1.7-1) unstable; urgency=low

  * Fixes: NB#259022 - Duplicated application icons in main menu

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 04 Aug 2011 17:45:19 +0300

meegotouchhome (1.1.6-1) unstable; urgency=low

  * Fixes: NB#271819 - [TASK] Applications being updated are not marked as such in the Launcher if Update all is selected

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 29 Jul 2011 15:09:42 +0300

meegotouchhome (1.1.5-1) unstable; urgency=low

  * Fixes: NB#260410 - Invalid desktop entry will be added to Launcher if it has entry in /usr/share/applications/installer-extra/ folder
  * Fixes: NB#274842 - Showing installation progress of an application that has been previously uninstalled in Launcher does not work properly

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 27 Jul 2011 17:59:55 +0300

meegotouchhome (1.1.4-1) unstable; urgency=low

  * Fixes: NB#270603 - Launcher icon in "dimmed" state when dismissing error dialog by tapping on it
  * Fixes: NB#250144 - Desktop entry parsing is not optimized in launcher
  * Fixes: NB#248129 - Paging canceling behavior is off